--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jair Aceves",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.1"
